--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
         <li><a href="OnlineComplaintPortal_7.zip" download>nachiketa</a></li>
         <h2>ommm</h2>
         <li><a href="EAD PRACTICAL.zip" download>ommmmmm</a></li>
+             <h2>priti</h2>
+        <li><a href="Question9.zip" download>priti</a></li>
     </ul>
 </body>
 </html>
