--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
         <li><a href="8a.zip" download>8a</a></li>
         <li><a href="8b.zip" download>8b</a></li>
         <h2>nachiketa</h2>
-        <li><a href="OnlineComplaintPortal_7.zip" download>nachiketa</a></li>
+        <li><a href="https://drive.google.com/file/d/1U4M9ffNgI5Lhx0oApN2uLYSFz8jsr74R/view?usp=sharing">nachiketa</a></li>
         <h2>ommm</h2>
-        <li><a href="EAD PRACTICAL.zip" download>ommmmmm</a></li>
+        <li><a href="https://drive.google.com/file/d/1gIdXrwZJ09UgdNExCzn-kKWw1ecZ4KpU/view?usp=sharing">ommmmmm</a></li>
              <h2>priti</h2>
         <li><a href="Question9.zip" download>priti</a></li>
+         <h2>devashreeeee</h2>
+        <li><a href="OnlineVotingSystem.zip" download>devashree</a></li>
     </ul>
 </body>
 </html>
