--- a/index.html
+++ b/index.html
@@ -63,5 +63,16 @@
          <h2>devashreeeee</h2>
         <li><a href="OnlineVotingSystem.zip" download>devashree</a></li>
     </ul>
+
+
+    <p>om db schema
+    CREATE TABLE book (
+    id BIGINT AUTO_INCREMENT PRIMARY KEY,
+    title VARCHAR(255),
+    author VARCHAR(255),
+    is_issued BOOLEAN DEFAULT FALSE,
+    student_prn VARCHAR(255)
+);
+    </p>
 </body>
 </html>
