--- a/index.html
+++ b/index.html
@@ -74,5 +74,61 @@
     student_prn VARCHAR(255)
 );
     </p>
+    <h2>
+        sql 24
+    </h2>
+    <p>
+        -- Create the authentication database
+CREATE DATABASE auth_system;
+
+-- Use the created database
+USE auth_system;
+
+-- Create users table
+CREATE TABLE users (
+    id INT AUTO_INCREMENT PRIMARY KEY,
+    username VARCHAR(50) UNIQUE NOT NULL,
+    password VARCHAR(100) NOT NULL  -- Store hashed passwords, not plaintext!
+);
+
+-- Insert a test user with SHA-256 hashed password ("admin123")
+INSERT INTO users (username, password) 
+VALUES ("admin", SHA2("admin123", 256));
+
+
+SELECT id, username, password FROM users;
+    </p>
+
+    <h2>
+        sql9
+    </h2>
+    <p>
+        CREATE DATABASE enrollmentdb;
+
+-- Select the database
+USE enrollmentdb;
+
+-- Create courses table
+CREATE TABLE courses (
+    id INT AUTO_INCREMENT PRIMARY KEY,
+    name VARCHAR(100) NOT NULL
+);
+
+-- Create students table with foreign key reference
+CREATE TABLE students (
+    id INT AUTO_INCREMENT PRIMARY KEY,
+    name VARCHAR(100) NOT NULL,
+    course_id INT,
+    FOREIGN KEY (course_id) REFERENCES courses(id) ON DELETE CASCADE
+);
+
+-- Insert course data
+INSERT INTO courses (name) 
+VALUES 
+    ('Java Programming'),
+    ('Web Development'),
+    ('Data Science'),
+    ('Machine Learning');
+    </p>
 </body>
 </html>
